
* When calculating metrics, make sure email addresses are handled in
  a case-insensitive manner.  Also remove trailing/leading whitespace
  from the addresses.

* Handle topic text that starts with the UTF-8 BOM.

* Workaround for invalid diff files generated by Subversion in a Chinese
  locale.  See http://marc.info/?l=subversion-users&m=118725115412403&w=3
  for more information.

Version 1.9.3

* The project list screen now displays for each project, the total
  number of open topics, and the total number of topics.  Clicking on
  the count will go to the topic list screen with the relevant topics
  displayed.

* Modified the VSS repository handler so that topics can be created
  by either entering in labels or version numbers in the start and
  end tag fields when creating a topic.  Previously, only labels
  were supported.

* The uri filter in the Template Toolkit changed its behaviour in 2.16,
  which was responsible for generating invalid links.  This has now
  been fixed.

* Better handling of Subversion diffs which were generated on
  non-English systems.

Version 1.9.2

* Codestriker now works with UTF-8 text, to support unicode character
  input for topic titles, descriptions, comment text, and project
  names and descriptions.  This required making Perl 5.8 as a
  pre-requisite, as Perl 5.6 doesn't cut the mustard for unicode
  processing.

* Created a new optional configuration parameter $repository_name_map
  in codestriker.conf.  This allows for a user-defined repository name
  to be displayed in the codestriker UI, rather than the full
  repository URL.  This can be useful for hiding potentially sensitive
  username/password information that might be a part of the repository
  URL.  See the codestriker.conf file for more information.
  Submitted by Edwin Fine <edwin.m.fine@verizon.com>.

* New repository module for linking to ClearCase dynamic views.  See
  the configuration file and/or manual for example configurations.