@@ -12,6 +12,7 @@ package Codestriker::BugDB::BugDBConnectionFactory;
 use strict;
 use Codestriker::BugDB::BugzillaConnection;
 use Codestriker::BugDB::FlysprayConnection;
+use Codestriker::BugDB::NoConnection;
 
 # Factory method for retrieving a BugDBConnection object.
 sub getBugDBConnection ($) {
@@ -22,6 +23,8 @@ sub getBugDBConnection ($) {
 	return Codestriker::BugDB::BugzillaConnection->get_connection();
     } elsif ($dbtype eq "flyspray") {
 	return Codestriker::BugDB::FlysprayConnection->get_connection();
+    } elsif ($dbtype =~ /^noconnect/) {
+	return Codestriker::BugDB::NoConnection->get_connection();
     } else {
 	die "Unsupported bug database type: $dbtype";
     }
